--- a/project/assets/css/_inc/price-editor.scss
+++ b/project/assets/css/_inc/price-editor.scss
@@ -15,6 +15,10 @@
     }
   }
 }
+.PriceEditor-priceRange {
+  visibility: hidden;
+  height: 12px;
+}
 
 .rangeslider,
 .rangeslider__fill {
